Merged branch https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_ProcessingFeedback into Trunk.
Changes on branch:
........
  r615153 | jeremias | 2008-01-25 10:07:21 +0100 (Fr, 25 Jan 2008) | 1 line
  
  Created temporary branch for processing feedback.
........
  r615155 | jeremias | 2008-01-25 10:11:59 +0100 (Fr, 25 Jan 2008) | 1 line
  
  Initial commit of what I've built already for those who prefer code to minimalistic design docs.
........
  r615278 | jeremias | 2008-01-25 18:25:00 +0100 (Fr, 25 Jan 2008) | 1 line
  
  EventProducer interfaces now operational.
........
  r615773 | jeremias | 2008-01-28 10:06:16 +0100 (Mo, 28 Jan 2008) | 1 line
  
  No casting in client code when creating EventProducer instances.
........
  r616242 | vhennebert | 2008-01-29 11:34:45 +0100 (Di, 29 Jan 2008) | 3 lines
  
  Trick to avoid hard-coding the class name of EventProducer in the source file.
  Feel free to revert if it's not ok.
........
  r616900 | jeremias | 2008-01-30 21:59:31 +0100 (Mi, 30 Jan 2008) | 1 line
  
  Generate event model XMLs in to the build directory: build/gensrc and build/test-gensrc (the latter is new and needs to be setup as source folder in your IDE!)
........
  r616907 | jeremias | 2008-01-30 22:12:59 +0100 (Mi, 30 Jan 2008) | 1 line
  
  Added an XMLResourceBundle that uses an XML file instead of a properties file to load the translations. The XML format is the same as for Cocoon's XMLResourceBundle.
........
  r617097 | vhennebert | 2008-01-31 11:53:21 +0100 (Do, 31 Jan 2008) | 2 lines
  
  Minor typo + slight improvement of Javadoc
........
  r617176 | jeremias | 2008-01-31 19:14:19 +0100 (Do, 31 Jan 2008) | 5 lines
  
  Renamed FopEvent to Event as suggested by Simon.
  EventProducerCollectorTask.java now reads the EventSeverity from a doclet tag.
  Added generation of EventProducer translations (including simple merging, no validation, yet)
  EventFormatter introduced (only basic functionality, yet).
  Added a simple EventListene